IceServer's uri is no longer set, switching to using urls.

Bug: 875213
Change-Id: Ida2e195ae818724a72012fb2f0907ef09adbde10
Reviewed-on: https://chromium-review.googlesource.com/1180366
Reviewed-by: Henrik Boström <hbos@chromium.org>
Commit-Queue: Hoi Pipeloi <jeroendb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584758}
Former-commit-id: 1eeedddb954066956154bba9a0fbb5c7161cd035